--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body{
     font-family: Arial, Helvetica, sans-serif;
     font-size:medium;
@@ -9,13 +8,13 @@ body{
     margin: 0;
     border-top: none;
     border-bottom: none;
-    background-color: #372115;
+    background-color: #1d1000;
     text-align: center;
 }
 .content{
     width: 85%;
     height: 100%;
-    background-color: #b7b19e;
+    background-color: #ccc4b1;
     padding-bottom: 100px;
 }
 .personaContainer{
@@ -44,7 +43,21 @@ small{
     font-style: italic;
 }
 button{
-    background-color: #b7b19e;
+    background-color: #817a6b;
     font-size: larger;
     padding: 8px;
+    box-shadow: 3px 3px 8px  #9f95b8;
+    border: 1px solid #372115;
+}
+a{
+    text-decoration: none;
+}
+a:hover{
+    color:#48bccf;
+}
+a:visited{
+    color:#d0c3f1;
+}
+hr{
+    color: #372115;
 }
