--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-body{
+body {
     font-family: Arial, Helvetica, sans-serif;
-    font-size:medium;
+    font-size: medium;
     display: flex;
     justify-content: center;
     width: 100%;
@@ -8,56 +8,68 @@ body{
     margin: 0;
     border-top: none;
     border-bottom: none;
-    background-color: #1d1000;
+    background-color: #2c1a0e;
     text-align: center;
 }
-.content{
+
+.content {
     width: 85%;
     height: 100%;
-    background-color: #a59f93;
+    background-color: #bfaf9b;
     padding-bottom: 100px;
 }
-.personaContainer{
+
+.personaContainer {
     width: 90%;
     display: flex;
     justify-content: center;
     padding: 10px;
     margin: auto;
 }
-.personaText{
+
+.personaText {
     display: grid;
     display: inline-grid;
     float: right;
     width: 470px;
     text-align: left;
     padding: 5px;
-
 }
-.persona{
+
+.persona {
     display: grid;
     display: inline-grid;
     float: left;
     padding: 30px;
 }
-small{
+
+small {
     font-style: italic;
 }
-button{
-    background-color: #817a6b;
+
+button {
+    background-color: #ae9c85;
     font-size: larger;
     padding: 8px;
-    box-shadow: 3px 3px 8px  #9f95b8;
-    border: 1px solid #372115;
+    box-shadow: 3px 3px 8px #3d2b1f;
+    border: 1px solid #4a2c1f;
+    color: #f5f5dc;
+    border-radius: 12px;
 }
-a{
+
+a {
     text-decoration: none;
+    color: #5a3e2b;
 }
-a:hover{
-    color:#48bccf;
+
+a:hover {
+    color: #ffdab9;
 }
-a:visited{
-    color:#c0b4dd;
+
+a:visited {
+    color: #4a2c1f;
 }
-hr{
-    color: #372115;
+
+hr {
+    color: #4a2c1f;
 }
