--- a/style.css
+++ b/style.css
@@ -11,14 +11,12 @@ body {
     background-color: #2c1a0e;
     text-align: center;
 }
-
 .content {
     width: 80%;
     height: 100%;
     background-color: #bfaf9b;
     padding-bottom: 100px;
 }
-
 .personaContainer {
     width: 90%;
     display: flex;
@@ -26,7 +24,6 @@ body {
     padding: 10px;
     margin: auto;
 }
-
 .personaText {
     display: grid;
     display: inline-grid;
@@ -35,14 +32,22 @@ body {
     text-align: left;
     padding: 5px;
 }
-
 .persona {
     display: grid;
     display: inline-grid;
     float: left;
     padding: 30px;
 }
-
+.taskContainer {
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    margin: auto;
+}
+.userTask{
+    text-align: left;
+}
 small {
     font-style: italic;
 }
