--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
 .taskContainer {
     width: 40%;
     display: flex;
-    flex-direction: column; /* Stack  vertically */
+    flex-direction: column;
     justify-content: center;
     padding: 10px;
     margin: auto;
@@ -54,7 +54,19 @@ li{
     padding: 10px;
     font-size: medium;
 }
-
+.successContainer{
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 10px;
+    margin: auto;
+}
+.successM{
+    text-align: left;
+    padding: 10px;
+    font-size: medium;
+}
 small {
     font-style: italic;
 }
